changed to flex layout instead of inline-block to avoid line spacing issues

--- a/src/BlockChart/styles.css
+++ b/src/BlockChart/styles.css
@@ -1,15 +1,15 @@
 /* CSS for Block charts and items*/
 
 .blockChart {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0 0.125em 0.125em 0;
-  background: grey;
+  display: flex;
+  flex-wrap: wrap;
+  border: 1em solid transparent;
+  border-width: 0 0.125em 0.125em 0;
 }
 
 .blockItem {
   box-sizing: border-box;
-  display: inline-flex;
+  flex: 0 0 auto;
   margin: 0;
   padding: 0;
   border: 1em solid transparent;
